--- a/.gitconfig
+++ b/.gitconfig
@@ -1,34 +1,85 @@
-[user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
-[core]
-  editor = vi
-  excludesfile = ~/.gitignore
-  autocrlf = input
 [color]
-  branch = auto
-  diff = auto
-  interactive = auto
-  status = auto
-[init]
-  defaultBranch = master
-[web]
-  browser = google-chrome
+    ui = auto
+    interactive = auto
+    status = auto
+    commit = auto
+    diff = auto
+    branch = auto
+
+[apply]
+    whitespace = strip
+    whitespace = nowarn
+
 [credential]
-  helper = osxkeychain
+  helper = cache
+
+[alias]
+    addall = !git add . && git add -u && git st
+    amend = commit --amend --reset-author --reuse-message=HEAD
+    aliases = !git config --get-regexp 'alias.*' | colrm 1 6 | sed 's/[ ]/ = /' | sort
+    br = branch
+    bra = branch -a
+    ci = commit -v
+    co = checkout
+    cp = cherry-pick
+    di = diff
+    diff-stat = diff -b --stat
+    graph = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+    history = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+    ignore = !([ ! -e .gitignore ] && touch .gitignore) | echo $1 >>.gitignore
+    logg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+    log-graph = log --all --graph --decorate
+    log-refs = log --all --graph --decorate --oneline --simplify-by-decoration --no-merges
+    log-timeline = log --format='%h %an %ar - %s'
+    log-local = log --oneline origin..HEAD
+    log-fetched = log --oneline HEAD..origin/master
+    merged = branch --merged
+    oneline = log --oneline
+    patch = log -p --no-walk # generate patch file from a commit.
+    pick = cherry-pick
+    pov = pull -v origin
+    prune = remote prune
+    prune-all = !git remote | xargs -n 1 git remote prune
+    qstat = status --untracked-files=no
+    search = log --pretty=short -S
+    st = status
+    staged = diff --staged
+    stat = status
+    sub = submodule update --init --recursive
+    uncommit = reset --soft HEAD^
+    unmerge = reset --hard ORIG_HEAD
+    unmerged = branch --no-merged
+    unstage = reset HEAD --
+    wdiff = diff --word-diff-regex=[a-zA-Z_0-9]+
+    which-branches-contain = branch -a --contains
+    which-tags-contain = name-rev --name-only
+    wipe = !git reset --hard; git clean -fd
+    rs = reset --hard
+	pushit = push -u origin HEAD
+
+[merge]
+    tool = opendiff
+
 [push]
   default = simple
-[merge]
-  tool = kdiff3
-[difftool]
-  prompt = false
-[alias]
-  c = commit
-  ca = commit -a
-  cm = commit -m
-  cam = commit -am
-  d = diff
-  dc = diff --cached
-  l = log --graph --pretty=format:"%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset" --abbrev-commit
-[pull]
-	rebase = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[user]
+	name = Andrew Fitzpatrick
+	email = andrew@fitz.biz
+[core]
+	excludesfile = /Users/andrew/.gitignore_global
+[commit]
+	template = /Users/fitzpata/.stCommitMsg
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+[init]
+	defaultBranch = main
