--- a/.gitconfig
+++ b/.gitconfig
@@ -28,3 +28,9 @@
   defaultBranch = main
 [alias]
   co = checkout
+[credential "https://github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
