Use tilde expansion for gitignore excludesfile path
Changes the hardcoded /Users/andrew/.gitignore path to ~/.gitignore for better portability across different systems and usernames.

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
 	name = andrewcfitz
 	email = andrew@fitz.biz
 [core]
-  excludesfile = /Users/andrew/.gitignore
+  excludesfile = ~/.gitignore
   eof = lf
   autocrlf = input
 [filter "lfs"]
