--- a/.gitconfig
+++ b/.gitconfig
@@ -29,8 +29,6 @@
 [alias]
   co = checkout
 [credential "https://github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = \\!/usr/bin/env gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = \\!/usr/bin/env gh auth git-credential
