--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,14 @@
+# Set the default terminal to support 256 colors and true color
+set -g default-terminal "tmux-256color"
+
+# Enable true color (RGB) support for various terminal types
+# terminal-overrides tells tmux what the OUTER terminal supports
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides ",*-256color:RGB"
+
+# Add Tc (True Color) flag for applications that check for it
+set -ag terminal-overrides ",xterm-256color:Tc"
+set -ag terminal-overrides ",*-256color:Tc"
+
+# Mouse support
 set -g mouse on
