Configure font and spacing settings for tmux profile
Adds Hack Nerd Font as the primary font, sets scrollback to 1000 lines, and configures horizontal/vertical spacing to 1 for the tmux iTerm2 profile.

--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -1240,6 +1240,8 @@
 			<string>Default</string>
 			<key>Guid</key>
 			<string>TMUX-PROFILE-GUID-1234</string>
+			<key>Horizontal Spacing</key>
+			<real>1</real>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -1259,10 +1261,20 @@
 			</dict>
 			<key>Name</key>
 			<string>tmux</string>
+			<key>Non Ascii Font</key>
+			<string>Monaco 12</string>
+			<key>Normal Font</key>
+			<string>HackNF-Regular 12</string>
 			<key>Prompt Before Closing 2</key>
 			<false/>
+			<key>Scrollback Lines</key>
+			<integer>1000</integer>
 			<key>Tags</key>
 			<array/>
+			<key>Use Non-ASCII Font</key>
+			<false/>
+			<key>Vertical Spacing</key>
+			<real>1</real>
 		</dict>
 	</array>
 	<key>OpenFileInNewWindows</key>
