--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -1283,6 +1283,8 @@
 			<string>xterm-256color</string>
 			<key>Title Components</key>
 			<integer>1</integer>
+			<key>Tmux Newline</key>
+			<false/>
 			<key>Unlimited Scrollback</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
