Replace SSH host alias from coder to dev-vm and update git credential helper paths

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,8 +27,8 @@
 [alias]
   co = checkout
 [credential "https://github.com"]
-	helper = \\!/home/coder/.local/bin/gh auth git-credential
+	helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = \\!/home/coder/.local/bin/gh auth git-credential
+	helper = !/usr/bin/gh auth git-credential
 [credential]
 	helper = store
