--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,9 @@ set -ag terminal-overrides ",*-256color:Tc"
 # Mouse support
 set -g mouse on
 
+# Tmux clipboard
+set -s set-clipboard on
+
 # Ctrl+K clears screen and tmux scrollback (preserves iTerm2 scrollback)
 bind-key -n C-k send-keys -R C-l \; clear-history
 
